@@ -84,3 +84,4 @@ DONE:
 - Add POSTDIR_NAME and TAGDIR_NAME to documentation in order to inform user that he can change that
 - Add more installation element in documentation
 - Change "github" source link to "gitorious" source link
+- Permit to create more templates with linked CSS
